# metaprogram

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: config.h  type_traits_cvrp.h  type_traits_helper.h  type_traits_type.h
tests/: CMakeLists.txt  test_cvrp.cpp  test_type.cpp
